fix submenu sub-pixel based collapsions

--- a/source/_patterns/01-molecules/05-navigation/00-primary-nav.scss
+++ b/source/_patterns/01-molecules/05-navigation/00-primary-nav.scss
@@ -113,7 +113,7 @@
         background: rgba($colorWhite, 0.95);
         min-width: 7.5em;
         left:0;
-        margin-top: 21.5px;
+        margin-top: 21px;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
         backface-visibility:hidden;
@@ -126,8 +126,8 @@
           position:absolute;
           left:0;
           right:0;
-          top:-21.5px;
-          border-top: 21.5px solid transparent;
+          top:-22px;
+          border-top: 22px solid transparent;
         }
       }
 
